# devtools-frontend

./: .aider.chat.history.md  .aider.input.history  .gitignore  .stylelintcache  BUILD.gn  DEPS  all_devtools_files.gni  all_devtools_modules.gni  analyze-trace.mjs  build-har-engine.sh  devtools_grd_files.gni  devtools_module_entrypoints.gni  eslint.config.mjs  package-lock.json  package.json  port-a11y-test-to-nonhosted.diff  update-trace-filenames.mjs  use-har-engine.mjs
.repo/: TRACE_FILE
config/gni/: devtools_grd_files.gni  i18n.gni
docs/: architecture_of_devtools.md  language_extension_api.md
docs/contributing/: settings-experiments-features.md
front_end/: .eslintrc.js  BUILD.gn  analyze-inspector-issues.mjs  analyze-trace.mjs  design_system_tokens.css  devtools_compatibility.js  externs.js
front_end/accessibility/: ARIAAttributesView.js  ARIAConfig.js  ARIAMetadata.js  AXTreePane.js  AccessibilityModel.js  AccessibilityNodeView.js  AccessibilitySidebarView.js  AccessibilityStrings.js
front_end/acorn/: acorn.js
front_end/animation/: AnimationGroupPreviewUI.js  AnimationModel.js  AnimationScreenshotPopover.js  AnimationTimeline.js  AnimationUI.js
front_end/audits/: AuditCategories.js  AuditCategory.js  AuditController.js  AuditExtensionCategory.js  AuditFormatters.js  AuditLauncherView.js  AuditResultView.js  AuditRules.js  AuditsPanel.js  module.json
front_end/audits2/: Audits2Panel.js
front_end/audits2_worker/: Audits2Service.js
front_end/bindings/: BlackboxManager.js  BreakpointManager.js  CSSWorkspaceBinding.js  CompilerScriptMapping.js  ContentProviderBasedProject.js  DebuggerWorkspaceBinding.js  DefaultScriptMapping.js  FileSystemWorkspaceBinding.js  FileUtils.js  LiveLocation.js  NetworkMapping.js  NetworkProject.js  PresentationConsoleMessageHelper.js  ResourceScriptMapping.js  ResourceUtils.js  SASSSourceMapping.js  StylesSourceMapping.js  TempFile.js
front_end/cm/: closebrackets.js  codemirror.js  comment.js  css.js  headlesscodemirror.js  htmlembedded.js  htmlmixed.js  javascript.js  markselection.js  matchbrackets.js  multiplex.js  overlay.js  simple.js  xml.js
front_end/cm_modes/: DefaultCodeMirrorMimeMode.js  clike.js  clojure.js  coffeescript.js  jsx.js  livescript.js  php.js  python.js  shell.js  stylus.js
front_end/common/: CSSShadowModel.js  Color.js  Console.js  ContentProvider.js  FormatterWorkerPool.js  Geometry.js  Object.js  Text.js  (+14 more)
front_end/models/trace/: BUILD.gn  EntityMapper.test.ts  EntityMapper.ts  LanternComputationData.ts  LegacyTracingModel.ts  ModelImpl.ts  Processor.test.ts  Processor.ts  README.md  TracingManager.test.ts  build-trace-engine-lib.sh  copy-build-trace-engine-for-publish.sh  package-template.json  trace.ts
front_end/models/trace/extras/: FetchNodes.test.ts  FetchNodes.ts  FilmStrip.ts  MainThreadActivity.ts  ScriptDuplication.test.ts  ScriptDuplication.ts  StackTraceForEvent.test.ts  StackTraceForEvent.ts  ThirdParties.ts  TimelineJSProfile.ts  TraceFilter.ts  TraceTree.ts
front_end/models/trace/handlers/: AnimationFramesHandler.ts  AnimationHandler.ts  AsyncJSCallsHandler.ts  AuctionWorkletsHandler.ts  BUILD.gn  EnhancedTracesHandler.ts  Entities.test.ts  Entities.ts  ExtensionTraceDataHandler.ts  FramesHandler.test.ts  FramesHandler.ts  GPUHandler.ts  InitiatorsHandler.ts  InvalidationsHandler.ts  LayerTreeHandler.ts  LayoutShiftsHandler.test.ts  LayoutShiftsHandler.ts  MetaHandler.test.ts  MetaHandler.ts  Migration.ts  ModelHandlers.ts  NetworkRequestsHandler.test.ts  NetworkRequestsHandler.ts  PageLoadMetricsHandler.ts  RendererHandler.test.ts  RendererHandler.ts  SamplesHandler.test.ts  SamplesHandler.ts  ScreenshotsHandler.test.ts  ScreenshotsHandler.ts  ScriptsHandler.ts  SelectorStatsHandler.ts  ServerTimingsHandler.ts  Threads.ts  UberFramesHandler.test.ts  UberFramesHandler.ts  UserInteractionsHandler.test.ts  UserInteractionsHandler.ts  UserTimingsHandler.test.ts  UserTimingsHandler.ts  (+7 more)
front_end/models/trace/helpers/: BUILD.gn  EntityMapper.ts  SamplesIntegrator.test.ts  SamplesIntegrator.ts  SyntheticEvents.test.ts  Timing.ts  Trace.test.ts  Trace.ts  TreeHelpers.test.ts  TreeHelpers.ts  helpers.ts
front_end/models/trace/insights/: BUILD.gn  CLSCulprits.test.ts  CLSCulprits.ts  Cache.ts  Common.test.ts  Common.ts  DOMSize.ts  DocumentLatency.ts  DuplicateJavaScript.ts  FontDisplay.ts  ForcedReflow.ts  ImageDelivery.test.ts  ImageDelivery.ts  InteractionToNextPaint.ts  LCPDiscovery.ts  LCPPhases.ts  NetworkDependencyTree.ts  RenderBlocking.test.ts  RenderBlocking.ts  SlowCSSSelector.ts  Statistics.test.ts  ThirdParties.test.ts  ThirdParties.ts  Viewport.ts  types.ts
front_end/models/trace/lantern/core/: NetworkAnalyzer.test.ts  NetworkAnalyzer.ts
front_end/models/trace/lantern/graph/: BaseNode.test.ts  BaseNode.ts  CPUNode.ts  NetworkNode.ts  PageDependencyGraph.test.ts  PageDependencyGraph.ts
front_end/models/trace/lantern/metrics/: FirstContentfulPaint.test.ts  FirstContentfulPaint.ts  Interactive.test.ts  Interactive.ts  LargestContentfulPaint.test.ts  LargestContentfulPaint.ts  MaxPotentialFID.ts  Metric.ts  SpeedIndex.test.ts  SpeedIndex.ts  TotalBlockingTime.ts
front_end/models/trace/lantern/simulation/: ConnectionPool.test.ts  ConnectionPool.ts  DNSCache.test.ts  DNSCache.ts  SimulationTimingMap.ts  Simulator.test.ts  Simulator.ts  TCPConnection.test.ts
front_end/models/trace/lantern/testing/: MetricTestUtils.ts
front_end/models/trace/root-causes/: LayoutShift.test.ts  LayoutShift.ts
front_end/models/trace/types/: Configuration.ts  File.ts  Timing.ts  TraceEvents.ts  types.ts
front_end/models/trace/worker/: Processor.ts  Types.ts  worker_entrypoint.ts
front_end/ui/components/docs/performance_panel/: BUILD.gn  basic.ts  flamechart.ts  network_request_tooltip.ts  standalone.html  standalone.ts
inspector_overlay/: README.md  css_grid_label_helpers.ts  drag_resize_handler.ts  highlight_flex_common.ts  highlight_grid_common.ts  tool_source_order.css
scripts/: analyze-trace.mjs  check_external_links.js  tsconfig.json  utils.js  watch_build.js
test/: README.md
(+1135 files in other folders)
