# Copyright 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/typescript/typescript.gni")
import("../visibility.gni")

devtools_module("trace") {
  sources = [
    "LanternComputationData.ts",
    "ModelImpl.ts",
    "Processor.ts",
    "TracingManager.ts",
    "handlers/AnimationFramesHandler.ts",
    "handlers/AnimationHandler.ts",
    "handlers/AsyncJSCallsHandler.ts",
    "handlers/AuctionWorkletsHandler.ts",
    "handlers/DOMStatsHandler.ts",
    "handlers/ExtensionTraceDataHandler.ts",
    "handlers/FlowsHandler.ts",
    "handlers/FramesHandler.ts",
    "handlers/GPUHandler.ts",
    "handlers/ImagePaintingHandler.ts",
    "handlers/InitiatorsHandler.ts",
    "handlers/InvalidationsHandler.ts",
    "handlers/LargestImagePaintHandler.ts",
    "handlers/LargestTextPaintHandler.ts",
    "handlers/LayerTreeHandler.ts",
    "handlers/LayoutShiftsHandler.ts",
    "handlers/MemoryHandler.ts",
    "handlers/MetaHandler.ts",
    "handlers/ModelHandlers.ts",
    "handlers/NetworkRequestsHandler.ts",
    "handlers/PageFramesHandler.ts",
    "handlers/PageLoadMetricsHandler.ts",
    "handlers/RendererHandler.ts",
    "handlers/SamplesHandler.ts",
    "handlers/ScreenshotsHandler.ts",
    "handlers/ScriptsHandler.ts",
    "handlers/SelectorStatsHandler.ts",
    "handlers/ServerTimingsHandler.ts",
    "handlers/Threads.ts",
    "handlers/UserInteractionsHandler.ts",
    "handlers/UserTimingsHandler.ts",
    "handlers/WarningsHandler.ts",
    "handlers/WorkersHandler.ts",
    "handlers/helpers.ts",
    "handlers/types.ts",
    "types/Configuration.ts",
    "types/Extensions.ts",
    "types/File.ts",
    "types/Timing.ts",
    "types/TraceEvents.ts",
  ]

  deps = [
    "../../../core/platform:bundle",
    "../../../core/sdk:bundle",
    "../../../generated",
    "../../../generated",
    "../../../third_party/third-party-web:bundle",
    "../../core/common:bundle",
    "../../core/platform:bundle",
    "../../core/sdk:bundle",
    "../../cpu_profile:bundle",
    "../../crux-manager:bundle",
    "../../generated:protocol",
    "../cpu_profile:bundle",
    "../helpers:bundle",
    "../types:bundle",
    "extras:bundle",
    "handlers:bundle",
    "helpers:bundle",
    "insights:bundle",
    "lantern:bundle",
    "root-causes:bundle",
    "types:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "trace.ts"

  deps = [ ":trace" ]

  visibility = [
    ":*",
    "../../../test/interactions/*",
    "../../core/sdk:unittests",
    "../../legacy_test_runner/*",
    "../../panels/ai_assistance/*",
    "../../panels/lighthouse/*",
    "../../panels/network/*",
    "../../panels/recorder/*",
    "../../panels/timeline/*",
    "../../services/trace_bounds/*",
    "../../services/tracing/*",
    "../../testing/*",
    "../../ui/components/docs/*",
    "../../ui/legacy/components/utils/*",
    "../timeline_model/*",
    "./*",
  ]

  visibility += devtools_models_visibility
}

ts_library("unittests") {
  testonly = true

  sources = [
    "ModelImpl.test.ts",
    "Processor.test.ts",
    "TracingManager.test.ts",
    "handlers/AnimationFramesHandler.test.ts",
    "handlers/AnimationHandler.test.ts",
    "handlers/AsyncJSCallsHandler.test.ts",
    "handlers/AuctionWorkletsHandler.test.ts",
    "handlers/DOMStatsHandler.test.ts",
    "handlers/ExtensionTraceDataHandler.test.ts",
    "handlers/FlowsHandler.test.ts",
    "handlers/FramesHandler.test.ts",
    "handlers/GPUHandler.test.ts",
    "handlers/ImagePaintingHandler.test.ts",
    "handlers/InitiatorsHandler.test.ts",
    "handlers/InvalidationsHandler.test.ts",
    "handlers/LargestImagePaintHandler.test.ts",
    "handlers/LargestTextPaintHandler.test.ts",
    "handlers/LayerTreeHandler.test.ts",
    "handlers/LayoutShiftsHandler.test.ts",
    "handlers/MemoryHandler.test.ts",
    "handlers/MetaHandler.test.ts",
    "handlers/NetworkRequestsHandler.test.ts",
    "handlers/PageFramesHandler.test.ts",
    "handlers/PageLoadMetricsHandler.test.ts",
    "handlers/RendererHandler.test.ts",
    "handlers/SamplesHandler.test.ts",
    "handlers/ScreenshotsHandler.test.ts",
    "handlers/ScriptsHandler.test.ts",
    "handlers/SelectorStatsHandler.test.ts",
    "handlers/ServerTimingsHandler.test.ts",
    "handlers/Threads.test.ts",
    "handlers/UserInteractionsHandler.test.ts",
    "handlers/UserTimingsHandler.test.ts",
    "handlers/WarningsHandler.test.ts",
    "handlers/WorkersHandler.test.ts",
    "handlers/helpers.test.ts",
    "types/File.test.ts",
    "types/TraceEvents.test.ts",
  ]

  deps = [
    ":bundle",
    "../../../core/platform:bundle",
    "../../testing",
  ]
}
