# Copyright 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/typescript/typescript.gni")
import("../visibility.gni")

devtools_module("trace") {
  sources = [
    "LanternComputationData.ts",
    "ModelImpl.ts",
    "Processor.ts",
    "TracingManager.ts",
    "extras/FetchNodes.ts",
    "extras/FilmStrip.ts",
    "extras/MainThreadActivity.ts",
    "extras/Metadata.ts",
    "extras/ScriptDuplication.ts",
    "extras/StackTraceForEvent.ts",
    "extras/ThirdParties.ts",
    "extras/TimelineJSProfile.ts",
    "extras/TraceFilter.ts",
    "extras/TraceTree.ts",
    "handlers/AnimationFramesHandler.ts",
    "handlers/AnimationHandler.ts",
    "handlers/AsyncJSCallsHandler.ts",
    "handlers/AuctionWorkletsHandler.ts",
    "handlers/DOMStatsHandler.ts",
    "handlers/ExtensionTraceDataHandler.ts",
    "handlers/FlowsHandler.ts",
    "handlers/FramesHandler.ts",
    "handlers/GPUHandler.ts",
    "handlers/ImagePaintingHandler.ts",
    "handlers/InitiatorsHandler.ts",
    "handlers/InvalidationsHandler.ts",
    "handlers/LargestImagePaintHandler.ts",
    "handlers/LargestTextPaintHandler.ts",
    "handlers/LayerTreeHandler.ts",
    "handlers/LayoutShiftsHandler.ts",
    "handlers/MemoryHandler.ts",
    "handlers/MetaHandler.ts",
    "handlers/ModelHandlers.ts",
    "handlers/NetworkRequestsHandler.ts",
    "handlers/PageFramesHandler.ts",
    "handlers/PageLoadMetricsHandler.ts",
    "handlers/RendererHandler.ts",
    "handlers/SamplesHandler.ts",
    "handlers/ScreenshotsHandler.ts",
    "handlers/ScriptsHandler.ts",
    "handlers/SelectorStatsHandler.ts",
    "handlers/ServerTimingsHandler.ts",
    "handlers/Threads.ts",
    "handlers/UserInteractionsHandler.ts",
    "handlers/UserTimingsHandler.ts",
    "handlers/WarningsHandler.ts",
    "handlers/WorkersHandler.ts",
    "handlers/helpers.ts",
    "handlers/types.ts",
    "helpers/Extensions.ts",
    "helpers/Network.ts",
    "helpers/SamplesIntegrator.ts",
    "helpers/SyntheticEvents.ts",
    "helpers/Timing.ts",
    "helpers/Trace.ts",
    "helpers/TreeHelpers.ts",
    "insights/CLSCulprits.ts",
    "insights/Common.ts",
    "insights/DOMSize.ts",
    "insights/DocumentLatency.ts",
    "insights/DuplicateJavaScript.ts",
    "insights/FontDisplay.ts",
    "insights/ForcedReflow.ts",
    "insights/ImageDelivery.ts",
    "insights/InteractionToNextPaint.ts",
    "insights/LCPDiscovery.ts",
    "insights/LCPPhases.ts",
    "insights/LongCriticalNetworkTree.ts",
    "insights/Models.ts",
    "insights/RenderBlocking.ts",
    "insights/SlowCSSSelector.ts",
    "insights/Statistics.ts",
    "insights/ThirdParties.ts",
    "insights/Viewport.ts",
    "insights/types.ts",
    "lantern/core/LanternError.ts",
    "lantern/core/NetworkAnalyzer.ts",
    "lantern/graph/BaseNode.ts",
    "lantern/graph/CPUNode.ts",
    "lantern/graph/NetworkNode.ts",
    "lantern/graph/PageDependencyGraph.ts",
    "lantern/metrics/FirstContentfulPaint.ts",
    "lantern/metrics/Interactive.ts",
    "lantern/metrics/LargestContentfulPaint.ts",
    "lantern/metrics/MaxPotentialFID.ts",
    "lantern/metrics/Metric.ts",
    "lantern/metrics/SpeedIndex.ts",
    "lantern/metrics/TBTUtils.ts",
    "lantern/metrics/TotalBlockingTime.ts",
    "lantern/simulation/ConnectionPool.ts",
    "lantern/simulation/Constants.ts",
    "lantern/simulation/DNSCache.ts",
    "lantern/simulation/SimulationTimingMap.ts",
    "lantern/simulation/Simulator.ts",
    "lantern/simulation/TCPConnection.ts",
    "lantern/types/Lantern.ts",
    "root-causes/LayoutShift.ts",
    "root-causes/RootCauses.ts",
    "types/Configuration.ts",
    "types/Extensions.ts",
    "types/File.ts",
    "types/Timing.ts",
    "types/TraceEvents.ts",
  ]

  deps = [
    "../../core/common:bundle",
    "../../core/platform:bundle",
    "../../core/root:bundle",
    "../../core/sdk:bundle",
    "../../generated:protocol",
    "../../third_party/third-party-web:bundle",
    "../cpu_profile:bundle",
    "../crux-manager:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "trace.ts"

  deps = [ ":trace" ]

  visibility = [
    ":*",
    "../../../test/interactions/*",
    "../../core/sdk:unittests",
    "../../legacy_test_runner/*",
    "../../panels/ai_assistance/*",
    "../../panels/lighthouse/*",
    "../../panels/network/*",
    "../../panels/recorder/*",
    "../../panels/timeline/*",
    "../../services/trace_bounds/*",
    "../../services/tracing/*",
    "../../testing/*",
    "../../ui/components/docs/*",
    "../../ui/legacy/components/utils/*",
    "./*",
  ]

  visibility += devtools_models_visibility
}

ts_library("unittests") {
  testonly = true

  sources = [
    "ModelImpl.test.ts",
    "Processor.test.ts",
    "TracingManager.test.ts",
    "extras/FetchNodes.test.ts",
    "extras/FilmStrip.test.ts",
    "extras/MainThreadActivity.test.ts",
    "extras/Metadata.test.ts",
    "extras/ScriptDuplication.test.ts",
    "extras/StackTraceForEvent.test.ts",
    "extras/ThirdParties.test.ts",
    "extras/TraceFilter.test.ts",
    "extras/TraceTree.test.ts",
    "handlers/AnimationFramesHandler.test.ts",
    "handlers/AnimationHandler.test.ts",
    "handlers/AsyncJSCallsHandler.test.ts",
    "handlers/AuctionWorkletsHandler.test.ts",
    "handlers/DOMStatsHandler.test.ts",
    "handlers/ExtensionTraceDataHandler.test.ts",
    "handlers/FlowsHandler.test.ts",
    "handlers/FramesHandler.test.ts",
    "handlers/GPUHandler.test.ts",
    "handlers/ImagePaintingHandler.test.ts",
    "handlers/InitiatorsHandler.test.ts",
    "handlers/InvalidationsHandler.test.ts",
    "handlers/LargestImagePaintHandler.test.ts",
    "handlers/LargestTextPaintHandler.test.ts",
    "handlers/LayerTreeHandler.test.ts",
    "handlers/LayoutShiftsHandler.test.ts",
    "handlers/MemoryHandler.test.ts",
    "handlers/MetaHandler.test.ts",
    "handlers/NetworkRequestsHandler.test.ts",
    "handlers/PageFramesHandler.test.ts",
    "handlers/PageLoadMetricsHandler.test.ts",
    "handlers/RendererHandler.test.ts",
    "handlers/SamplesHandler.test.ts",
    "handlers/ScreenshotsHandler.test.ts",
    "handlers/ScriptsHandler.test.ts",
    "handlers/SelectorStatsHandler.test.ts",
    "handlers/ServerTimingsHandler.test.ts",
    "handlers/Threads.test.ts",
    "handlers/UserInteractionsHandler.test.ts",
    "handlers/UserTimingsHandler.test.ts",
    "handlers/WarningsHandler.test.ts",
    "handlers/WorkersHandler.test.ts",
    "handlers/helpers.test.ts",
    "helpers/SamplesIntegrator.test.ts",
    "helpers/SyntheticEvents.test.ts",
    "helpers/Timing.test.ts",
    "helpers/Trace.test.ts",
    "helpers/TreeHelpers.test.ts",
    "insights/CLSCulprits.test.ts",
    "insights/Common.test.ts",
    "insights/DOMSize.test.ts",
    "insights/DocumentLatency.test.ts",
    "insights/FontDisplay.test.ts",
    "insights/ForcedReflow.test.ts",
    "insights/ImageDelivery.test.ts",
    "insights/InteractionToNextPaint.test.ts",
    "insights/LCPDiscovery.test.ts",
    "insights/LCPPhases.test.ts",
    "insights/RenderBlocking.test.ts",
    "insights/SlowCSSSelector.test.ts",
    "insights/Statistics.test.ts",
    "insights/ThirdParties.test.ts",
    "insights/Viewport.test.ts",
    "lantern/core/NetworkAnalyzer.test.ts",
    "lantern/graph/BaseNode.test.ts",
    "lantern/graph/PageDependencyGraph.test.ts",
    "lantern/metrics/FirstContentfulPaint.test.ts",
    "lantern/metrics/Interactive.test.ts",
    "lantern/metrics/LargestContentfulPaint.test.ts",
    "lantern/metrics/SpeedIndex.test.ts",
    "lantern/metrics/TBTUtils.test.ts",
    "lantern/simulation/ConnectionPool.test.ts",
    "lantern/simulation/DNSCache.test.ts",
    "lantern/simulation/Simulator.test.ts",
    "lantern/simulation/TCPConnection.test.ts",
    "root-causes/LayoutShift.test.ts",
    "types/File.test.ts",
    "types/TraceEvents.test.ts",
  ]

  deps = [
    ":bundle",
    "../../testing",
  ]
}
