# Copyright 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/typescript/typescript.gni")
import("../visibility.gni")

devtools_module("trace") {
  sources = [
    "LanternComputationData.ts",
    "ModelImpl.ts",
    "Processor.ts",
    "TracingManager.ts",
    "extras/FetchNodes.ts",
    "extras/FilmStrip.ts",
    "extras/MainThreadActivity.ts",
    "extras/Metadata.ts",
    "extras/ScriptDuplication.ts",
    "extras/StackTraceForEvent.ts",
    "extras/ThirdParties.ts",
    "extras/TimelineJSProfile.ts",
    "extras/TraceFilter.ts",
    "extras/TraceTree.ts",
  ]

  deps = [
    "../../core/common:bundle",
    "../../core/platform:bundle",
    "../../core/root:bundle",
    "../../core/sdk:bundle",
    "../../generated:protocol",
    "../cpu_profile:bundle",
    "handlers:bundle",
    "helpers:bundle",
    "insights:bundle",
    "lantern:bundle",
    "root-causes:bundle",
    "types:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "trace.ts"

  deps = [ ":trace" ]

  visibility = [
    ":*",
    "../../../test/interactions/*",
    "../../core/sdk:unittests",
    "../../legacy_test_runner/*",
    "../../panels/ai_assistance/*",
    "../../panels/lighthouse/*",
    "../../panels/network/*",
    "../../panels/recorder/*",
    "../../panels/timeline/*",
    "../../services/trace_bounds/*",
    "../../services/tracing/*",
    "../../testing/*",
    "../../ui/components/docs/*",
    "../../ui/legacy/components/utils/*",
    "./*",
  ]

  visibility += devtools_models_visibility
}

ts_library("unittests") {
  testonly = true

  sources = [
    "ModelImpl.test.ts",
    "Processor.test.ts",
    "TracingManager.test.ts",
    "extras/FetchNodes.test.ts",
    "extras/FilmStrip.test.ts",
    "extras/MainThreadActivity.test.ts",
    "extras/Metadata.test.ts",
    "extras/ScriptDuplication.test.ts",
    "extras/StackTraceForEvent.test.ts",
    "extras/ThirdParties.test.ts",
    "extras/TraceFilter.test.ts",
    "extras/TraceTree.test.ts",
  ]

  deps = [
    ":bundle",
    "../../core/platform:bundle",
    "../../testing",
  ]
}
